NAvegador movil Hecho

--- a/src/index.html
+++ b/src/index.html
@@ -16,32 +16,31 @@
   <body>
     <header>
       <nav>
-        <div class="logo"><a href="index.html"><img src="img/logoVergueriaDeMallorca.jpg" alt="Logo"></a></div>
-        <div class="menu">
-          <ul>
-            <li class="index">
-              <a href="index.html">Inicio</a>
-            </li>
-            <li class="events">
-              <a href="events.html">Eventos</a>
-            </li>
-            <li class="schedule">
-              <a href="schedule.html">Horarios</a>
-            </li>
-            <li class="prices">
-              <a href="prices.html">Precios de La Verguería</a>
-            </li>
-          </ul>
+        <div class="logo">
+          <a href="index.html"
+            ><img src="img/logoVergueriaDeMallorca.jpg" alt="Logo"
+          /></a>
         </div>
-        <div class="search-box">
-            <form action="#" id="search-form" method="get">
-              <input type="text" value="" name="s" id="s" />
-              <input type="submit" value="Buscar" />
-            </form>
+        <div id="menuToggle">
+          <input type="checkbox" />
+
+          <span></span>
+          <span></span>
+          <span></span>
+
+          <div class="topnav">
+            <a class="active" href="events.html">Eventos</a>
+            <a href="schedule.html">Horario</a>
+            <a href="prices.html">Precios de la Verguería</a>
           </div>
+        </div>
       </nav>
     </header>
     <main></main>
     <footer></footer>
   </body>
+  <script
+    src="https://kit.fontawesome.com/6c29019bc8.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
