--- a/src/index.html
+++ b/src/index.html
@@ -53,31 +53,45 @@
     </header>
     <main>
       <div
-        id="carouselExampleSlidesOnly"
-        class="carousel slide"
-        data-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-80" src="img/viaje-aniversario-752x440.jpg" alt="First slide" />
-            <div class="carousel-caption  d-md-block">
-              <h3 class="carousel-text">Celebramos El Primer Aniversario</h3>
-            </div>
+      id="carouselExampleSlidesOnly"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="d-block w-100"
+            src="img/viaje-aniversario-752x440.jpg"
+            alt="First slide"
+          />
+          <div class="carousel-caption d-md-block">
+            <h3 class="carousel-text">Celebramos El Primer Aniversario</h3>
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-80" src="img/despedida-de-soltero-752x440.jpg" alt="Second slide" />
-            <div class="carousel-caption d-md-block">
-              <h3 class="carousel-text">...</h3>
-            </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="img/despedida-de-soltero-752x440.jpg"
+            alt="Second slide"
+          />
+          <div class="carousel-caption d-md-block">
+            <h3 class="carousel-text">
+              Deja que Organicemos tu Despedida de Solert@
+            </h3>
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-80" src="img/2-x-1-752x440.jpg" alt="Third slide" />
-            <div class="carousel-caption d-md-block">
-              <h3 class="carousel-text">...</h3>
-            </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="img/2-x-1-752x440.jpg"
+            alt="Third slide"
+          />
+          <div class="carousel-caption d-md-block">
+            <h3 class="carousel-text">Celebra SanValentin con Nosotros</h3>
           </div>
         </div>
       </div>
+    </div>
     </main>
     <footer></footer>
   </body>
