Mapa Introducido Events Acabado

--- a/src/index.html
+++ b/src/index.html
@@ -53,47 +53,101 @@
     </header>
     <main>
       <div
-      id="carouselExampleSlidesOnly"
-      class="carousel slide"
-      data-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            class="d-block w-100"
-            src="img/viaje-aniversario-752x440.jpg"
-            alt="First slide"
-          />
-          <div class="carousel-caption d-md-block">
-            <h3 class="carousel-text">Celebramos El Primer Aniversario</h3>
+        id="carouselExampleSlidesOnly"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              class="d-block w-100"
+              src="img/viaje-aniversario-752x440.jpg"
+              alt="First slide"
+            />
+            <div class="carousel-caption d-md-block">
+              <h3 class="carousel-text">Celebramos El Primer Aniversario</h3>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="img/despedida-de-soltero-752x440.jpg"
-            alt="Second slide"
-          />
-          <div class="carousel-caption d-md-block">
-            <h3 class="carousel-text">
-              Deja que Organicemos tu Despedida de Solert@
-            </h3>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="img/despedida-de-soltero-752x440.jpg"
+              alt="Second slide"
+            />
+            <div class="carousel-caption d-md-block">
+              <h3 class="carousel-text">
+                Deja que Organicemos tu Despedida de Solter@
+              </h3>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="img/2-x-1-752x440.jpg"
-            alt="Third slide"
-          />
-          <div class="carousel-caption d-md-block">
-            <h3 class="carousel-text">Celebra SanValentin con Nosotros</h3>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="img/2-x-1-752x440.jpg"
+              alt="Third slide"
+            />
+            <div class="carousel-caption d-md-block">
+              <h3 class="carousel-text">Celebra SanValentin con Nosotros</h3>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+      <p class="map-msg">Donde ir a Comerte una buena Verga</p>
+      <iframe
+        class="mx-auto d-block img-fluid map border rounded"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49179.452858050405!2d2.638464999035676!3d39.611084043379755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129793c94fd7b6ab%3A0xff3ec642308cb8fb!2sLa%20Verguer%C3%ADa%20Mallorca%20Erotic%20Waffle%20%26%20ice%20cream!5e0!3m2!1sca!2ses!4v1666186423788!5m2!1sca!2ses"
+        width="600"
+        height="450"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </main>
-    <footer></footer>
+    <footer class="text-center text-white" style="background-color: #fb5ead;">
+      <div class="container pt-4">
+        <section class="mb-4">
+          <a
+            class="btn btn-link btn-floating btn-lg text-dark m-1"
+            href="https://es-es.facebook.com/Lavergueriademallorca/"
+            role="button"
+            data-mdb-ripple-color="dark"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+              <a
+            class="btn btn-link btn-floating btn-lg text-dark m-1"
+            href="https://twitter.com/lavergueria?lang=ca"
+            role="button"
+            data-mdb-ripple-color="dark"
+            ><i class="fab fa-twitter"></i
+          ></a>
+              <a
+            class="btn btn-link btn-floating btn-lg text-dark m-1"
+            href="http://lavergueriademallorca.es/"
+            role="button"
+            data-mdb-ripple-color="dark"
+            ><i class="fab fa-google"></i
+          ></a>
+              <a
+            class="btn btn-link btn-floating btn-lg text-dark m-1"
+            href="https://www.instagram.com/lavergueria/"
+            role="button"
+            data-mdb-ripple-color="dark"
+            ><i class="fab fa-instagram"></i
+          ></a>
+              <a
+            class="btn btn-link btn-floating btn-lg text-dark m-1"
+            href="#!"
+            role="button"
+            data-mdb-ripple-color="dark"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+        </section>
+      </div>  
+      <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2022 Copyright: 
+        <a class="text-dark" href="http://lavergueriademallorca.es/"> LaVergueria.es</a>
+      </div>
+    </footer>
   </body>
   <script
     src="https://kit.fontawesome.com/6c29019bc8.js"
