Menu Prices Empezado

--- a/src/prices.html
+++ b/src/prices.html
@@ -10,7 +10,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="shortcut icon"
       type="image/jpg"
@@ -18,7 +18,7 @@
     />
     <title>La Verguería de Mallorca- Precios</title>
   </head>
-  <body>
+  <body id="prices">
     <header>
       <nav class="navbar navbar-expand-lg navbar-light">
         <button
@@ -52,8 +52,62 @@
       </nav>
     </header>
     <main>
+      <div class="mx-auto d-block img-fluid menu-img">
+        <img src="img/Menú-1.jpeg" alt="Menu-1">
+        <img src="img/Menú-2.jpeg" alt="Menu-2">
+      </div>
+      
     </main>
-    <footer></footer>
+        <footer class="text-center text-white" style="background-color: #fb5ead">
+      <div class="container pt-4">
+        <section class="mb-4">
+          <a
+            class="btn btn-link btn-floating btn-lg text-dark m-1"
+            href="https://es-es.facebook.com/Lavergueriademallorca/"
+            role="button"
+            data-mdb-ripple-color="dark"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a
+            class="btn btn-link btn-floating btn-lg text-dark m-1"
+            href="https://twitter.com/lavergueria?lang=ca"
+            role="button"
+            data-mdb-ripple-color="dark"
+            ><i class="fab fa-twitter"></i
+          ></a>
+          <a
+            class="btn btn-link btn-floating btn-lg text-dark m-1"
+            href="http://lavergueriademallorca.es/"
+            role="button"
+            data-mdb-ripple-color="dark"
+            ><i class="fab fa-google"></i
+          ></a>
+          <a
+            class="btn btn-link btn-floating btn-lg text-dark m-1"
+            href="https://www.instagram.com/lavergueria/"
+            role="button"
+            data-mdb-ripple-color="dark"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a
+            class="btn btn-link btn-floating btn-lg text-dark m-1"
+            href="#!"
+            role="button"
+            data-mdb-ripple-color="dark"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+        </section>
+      </div>
+      <div
+        class="text-center text-dark p-3"
+        style="background-color: rgba(0, 0, 0, 0.2)"
+      >
+        © 2022 Copyright:
+        <a class="text-dark" href="http://lavergueriademallorca.es/">
+          LaVergueria.es</a
+        >
+      </div>
+    </footer>
   </body>
   <script
     src="https://kit.fontawesome.com/6c29019bc8.js"
