Imagenes nuevas menu empezado

--- a/src/prices.html
+++ b/src/prices.html
@@ -52,13 +52,46 @@
       </nav>
     </header>
     <main>
-      <div class="mx-auto d-block img-fluid menu-img">
-        <img src="img/Menú-1.jpeg" alt="Menu-1">
-        <img src="img/Menú-2.jpeg" alt="Menu-2">
+      <h3 class="menu-title">Que te Apetece lamer?</h3>
+      <div class="card-group">
+        <div class="card">
+          <img src="img/vergoleta.png" alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title">Vergoleta Golosina Roja</h5>
+            <p class="card-text">
+              Lame como sabes el dulce mas Rojo
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img  src="img/chocholeta.png" alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title">Chocholeta Golosina Roja</h5>
+            <p class="card-text">
+              Lame como sabes el dulce mas Rojo
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/tetoleta.png" alt="Card image cap" />
+          <div class="card-body">
+            <h5 class="card-title">Tetoleta</h5>
+            <p class="card-text">
+              El dulce
+            </p>
+          </div>
       </div>
-      
+      <div class="card">
+        <img  src="img/vergoletaXL.png" alt="Card image cap" />
+        <div class="card-body">
+          <h5 class="card-title">VergoletaXL Caramelo Multicolor</h5>
+          <p class="card-text">
+            El dulce
+          </p>
+        </div>
+    </div>
     </main>
-        <footer class="text-center text-white" style="background-color: #fb5ead">
+    <footer class="text-center text-white" style="background-color: #fb5ead">
       <div class="container pt-4">
         <section class="mb-4">
           <a
