--- a/src/prices.html
+++ b/src/prices.html
@@ -144,6 +144,116 @@
         </div>
       </div>
       </div>
+
+      <h3 class="menu-title">Combina Las Bolas A tu Gusto!</h3>
+      <div class="row row-cols-2 row-cols-md-2 g-4">
+        <div class="col">
+        <div class="card mb-3" style="max-width: 540px">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img
+                src="img/fresa.png"
+                class="img-fluid rounded-start"
+                alt="Vergoleta"
+              />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Fresa</h5>
+                <p class="card-text">
+                  Una bola grande y fria con sabor a Fresa
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-3" style="max-width: 540px">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img
+                src="img/turron.png"
+                class="img-fluid rounded-start"
+                alt="Chocholeta"
+              />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Turron</h5>
+                <p class="card-text">
+                  Una bola grande y fria con sabor a Turron
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-3" style="max-width: 540px">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img
+                src="img/mango.png"
+                class="img-fluid rounded-start"
+                alt="Tetoleta"
+              />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Mango</h5>
+                <p class="card-text">
+                  Una bola grande y fria con sabor a Mango
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-3" style="max-width: 540px">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img
+                src="img/leche-merengada.png"
+                class="img-fluid rounded-start"
+                alt="VergoletaXL"
+              />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Leche Merengada</h5>
+                <p class="card-text">
+                  Una bola grande y fria con sabor a Leche Merengada
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="col">
+        <div class="card mb-3" style="max-width: 540px">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img
+                src="img/chocolate.png"
+                class="img-fluid rounded-start"
+                alt="VergoletaXL"
+              />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Chocolate</h5>
+                <p class="card-text">
+                  Una bola grande y fria con sabor a Chocolate
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
     </main>
     <footer class="text-center text-white" style="background-color: #fb5ead">
       <div class="container pt-4">
