--- a/src/prices.html
+++ b/src/prices.html
@@ -54,11 +54,11 @@
     </header>
     <main>
       <h3 class="menu-title">Que te Apetece lamer?</h3>
-      <div class="row row-cols-2 row-cols-md-2 g-4">
-        <div class="col">
+      <div class="row row-cols-2 row-cols-md-2  g-4">
+        <div class="col col-sm-12">
         <div class="card mb-3" style="max-width: 540px">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-4 card-image-top">
               <img
                 src="img/vergoleta.png"
                 class="img-fluid rounded-start"
@@ -77,10 +77,10 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col col-sm-12">
         <div class="card mb-3" style="max-width: 540px">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-4 card-image-top">
               <img
                 src="img/chocholeta.png"
                 class="img-fluid rounded-start"
@@ -99,10 +99,10 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col col-sm-12">
         <div class="card mb-3" style="max-width: 540px">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-4 card-image-top">
               <img
                 src="img/tetoleta.png"
                 class="img-fluid rounded-start"
@@ -121,10 +121,10 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col col-sm-12">
         <div class="card mb-3" style="max-width: 540px">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-4 card-image-top">
               <img
                 src="img/vergoletaXL.png"
                 class="img-fluid rounded-start"
@@ -147,10 +147,10 @@
 
       <h3 class="menu-title">Combina Las Bolas A tu Gusto!</h3>
       <div class="row row-cols-2 row-cols-md-2 g-4">
-        <div class="col">
+        <div class="col col-12">
         <div class="card mb-3" style="max-width: 540px">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-4 card-image-top">
               <img
                 src="img/fresa.png"
                 class="img-fluid rounded-start"
@@ -168,10 +168,10 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col col-12">
         <div class="card mb-3" style="max-width: 540px">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-4 card-image-top">
               <img
                 src="img/turron.png"
                 class="img-fluid rounded-start"
@@ -189,10 +189,10 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col col-12">
         <div class="card mb-3" style="max-width: 540px">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-4 card-image-top">
               <img
                 src="img/mango.png"
                 class="img-fluid rounded-start"
@@ -210,10 +210,10 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col col-12">
         <div class="card mb-3" style="max-width: 540px">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-4 card-image-top">
               <img
                 src="img/leche-merengada.png"
                 class="img-fluid rounded-start"
@@ -231,11 +231,10 @@
           </div>
         </div>
       </div>
-      </div>
-      <div class="col">
+      <div class="col col-12">
         <div class="card mb-3" style="max-width: 540px">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-4 card-image-top">
               <img
                 src="img/chocolate.png"
                 class="img-fluid rounded-start"
@@ -252,7 +251,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>      
       </div>
     </main>
     <footer class="text-center text-white" style="background-color: #fb5ead">
