Horario Medio Acabado

--- a/src/events.html
+++ b/src/events.html
@@ -47,6 +47,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="prices.html">Precios de La Vergueria</a>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="contact.html">Contacto</a>
+            </li>
           </ul>
         </div>
       </nav>
