--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="prices.html">Precios de La Vergueria</a>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="contact.html">Contacto</a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -94,6 +97,7 @@
       </div>
       <p class="map-msg">Donde ir a Comerte una buena Verga</p>
       <iframe
+      id="mapa"
         class="mx-auto d-block img-fluid map border rounded"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49179.452858050405!2d2.638464999035676!3d39.611084043379755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129793c94fd7b6ab%3A0xff3ec642308cb8fb!2sLa%20Verguer%C3%ADa%20Mallorca%20Erotic%20Waffle%20%26%20ice%20cream!5e0!3m2!1sca!2ses!4v1666186423788!5m2!1sca!2ses"
         width="600"
