--- a/src/prices.html
+++ b/src/prices.html
@@ -48,210 +48,278 @@
             <li class="nav-item active">
               <a class="nav-link" href="prices.html">Precios de La Vergueria</a>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="contact.html">Contacto</a>
+            </li>
           </ul>
         </div>
       </nav>
     </header>
     <main>
+      <h1 class="page-title">Price</h1>
       <h3 class="menu-title">Que te Apetece lamer?</h3>
-      <div class="row row-cols-2 row-cols-md-2  g-4">
+      <div class="row row-cols-2 row-cols-md-2 g-4">
         <div class="col col-sm-12">
-        <div class="card mb-3" style="max-width: 540px">
-          <div class="row g-0">
-            <div class="col-md-4 card-image-top">
-              <img
-                src="img/vergoleta.png"
-                class="img-fluid rounded-start"
-                alt="Vergoleta"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Vergoleta</h5>
-                <p class="card-text">
-                  Disfruta lamiendo este dulce de color Rojo y
-                  desata tus deseos mas impuros
-                </p>
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4 card-image-top">
+                <img
+                  src="img/vergoleta.png"
+                  class="img-fluid rounded-start"
+                  alt="Vergoleta"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Vergoleta</h5>
+                  <p class="card-text">
+                    Disfruta lamiendo este dulce de color Rojo y desata tus
+                    deseos mas impuros
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col col-sm-12">
-        <div class="card mb-3" style="max-width: 540px">
-          <div class="row g-0">
-            <div class="col-md-4 card-image-top">
-              <img
-                src="img/chocholeta.png"
-                class="img-fluid rounded-start"
-                alt="Chocholeta"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Chocholeta</h5>
-                <p class="card-text">
-                  Disfruta lamiendo este dulce de color Rojo y
-                  desata tus deseos mas impuros
-                </p>
+        <div class="col col-sm-12">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4 card-image-top">
+                <img
+                  src="img/chocholeta.png"
+                  class="img-fluid rounded-start"
+                  alt="Chocholeta"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Chocholeta</h5>
+                  <p class="card-text">
+                    Disfruta lamiendo este dulce de color Rojo y desata tus
+                    deseos mas impuros
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col col-sm-12">
-        <div class="card mb-3" style="max-width: 540px">
-          <div class="row g-0">
-            <div class="col-md-4 card-image-top">
-              <img
-                src="img/tetoleta.png"
-                class="img-fluid rounded-start"
-                alt="Tetoleta"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Tetoleta</h5>
-                <p class="card-text">
-                  Disfruta lamiendo este dulce redondo y desata tus deseos mas
-                  impuros
-                </p>
+        <div class="col col-sm-12">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4 card-image-top">
+                <img
+                  src="img/tetoleta.png"
+                  class="img-fluid rounded-start"
+                  alt="Tetoleta"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Tetoleta</h5>
+                  <p class="card-text">
+                    Disfruta lamiendo este dulce redondo y desata tus deseos mas
+                    impuros
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col col-sm-12">
-        <div class="card mb-3" style="max-width: 540px">
-          <div class="row g-0">
-            <div class="col-md-4 card-image-top">
-              <img
-                src="img/vergoletaXL.png"
-                class="img-fluid rounded-start"
-                alt="VergoletaXL"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Vergoleta XL</h5>
-                <p class="card-text">
-                  Disfruta lamiendo este dulce Multicolor de tamaño extra grande. 
-                  Podras con el ?
-                </p>
+        <div class="col col-sm-12">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4 card-image-top">
+                <img
+                  src="img/vergoletaXL.png"
+                  class="img-fluid rounded-start"
+                  alt="VergoletaXL"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Vergoleta XL</h5>
+                  <p class="card-text">
+                    Disfruta lamiendo este dulce Multicolor de tamaño extra
+                    grande. Podras con el ?
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
       </div>
 
       <h3 class="menu-title">Combina Las Bolas A tu Gusto!</h3>
       <div class="row row-cols-2 row-cols-md-2 g-4">
         <div class="col col-12">
-        <div class="card mb-3" style="max-width: 540px">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4 card-image-top">
+                <img
+                  src="img/fresa.png"
+                  class="img-fluid rounded-start"
+                  alt="Vergoleta"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Fresa</h5>
+                  <p class="card-text">
+                    Una bola grande y fria con sabor a Fresa
+                  </p>
+                  <p><img src="img/lactosa.png" alt=""></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-12">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4 card-image-top">
+                <img
+                  src="img/turron.png"
+                  class="img-fluid rounded-start"
+                  alt="Chocholeta"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Turron</h5>
+                  <p class="card-text">
+                    Una bola grande y fria con sabor a Turron
+                  </p>
+                  <p><img src="img/lactosa.png" alt=""></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-12">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4 card-image-top">
+                <img
+                  src="img/mango.png"
+                  class="img-fluid rounded-start"
+                  alt="Tetoleta"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Mango</h5>
+                  <p class="card-text">
+                    Una bola grande y fria con sabor a Mango
+                  </p>
+                  <p><img src="img/lactosa.png" alt=""></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-12">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4 card-image-top">
+                <img
+                  src="img/chocolate.png"
+                  class="img-fluid rounded-start"
+                  alt="VergoletaXL"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Chocolate</h5>
+                  <p class="card-text">
+                    Una bola grande y fria con sabor a Chocolate
+                  </p>
+                  <p><img src="img/lactosa.png" alt=""></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-12">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4 card-image-top">
+                <img
+                  src="img/leche-merengada.png"
+                  class="img-fluid rounded-start"
+                  alt="VergoletaXL"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Leche Merengada</h5>
+                  <p class="card-text">
+                    Una bola grande y fria con sabor a Leche Merengada
+                  </p>
+                  <p><img src="img/lactosa.png" alt=""></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <h3 class="menu-title">Que te Vas a Comer Hoy</h3>
+      <div class="row row-cols-3 row-cols-md-3 g-4">
+        <div class="col col-12">
+        <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-4 card-image-top">
               <img
-                src="img/fresa.png"
+                src="img/vergofre.png"
                 class="img-fluid rounded-start"
                 alt="Vergoleta"
               />
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Fresa</h5>
+                <h5 class="card-title">Vergofre</h5>
                 <p class="card-text">
-                  Una bola grande y fria con sabor a Fresa
+                  Un Gofre muy caliente de la forma que mas te gusta
                 </p>
+                <p class="gluten"><img src="img/glutenFree.png" alt="glutenFree "> Solo por 1€ mas</p>
+                <p>Puedes Rellenarlo por +0.70€ y/o Mojarlo por +0.50€</p>
+                <p>Hazlo mas Diveritdo añadiendo tus Toppings Favoritos</p>
+                <p>1 - +0.50€</p>
+                <p>2 - +0.90€</p>
+                <p>3 - +1,20€</p>
+                <p>Ponle nata Montada para Culminar +0,50€</p>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col col-12">
-        <div class="card mb-3" style="max-width: 540px">
-          <div class="row g-0">
-            <div class="col-md-4 card-image-top">
-              <img
-                src="img/turron.png"
-                class="img-fluid rounded-start"
-                alt="Chocholeta"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Turron</h5>
-                <p class="card-text">
-                  Una bola grande y fria con sabor a Turron
-                </p>
+        </div>
+        <div class="col col-12">
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4 card-image-top">
+                <img
+                  src="img/chochofre.png"
+                  class="img-fluid rounded-start"
+                  alt="Vergoleta"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Chochofre</h5>
+                  <p class="card-text">
+                    Un Gofre muy caliente de la forma que mas te gusta
+                  </p>
+                  <p class="gluten"><img src="img/glutenFree.png" alt="glutenFree "> Solo por +1€ mas</p>
+                  <p>Puedes Rellenarlo por +0.70€ y/o Mojarlo por +0.50€</p>
+                  <p>Hazlo mas Diveritdo añadiendo tus Toppings Favoritos</p>
+                  <p>1 - +0.50€</p>
+                  <p>2 - +0.90€</p>
+                  <p>3 - +1,20€</p>
+                  <p>Ponle nata Montada para Culminar +0,50€</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col col-12">
-        <div class="card mb-3" style="max-width: 540px">
-          <div class="row g-0">
-            <div class="col-md-4 card-image-top">
-              <img
-                src="img/mango.png"
-                class="img-fluid rounded-start"
-                alt="Tetoleta"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Mango</h5>
-                <p class="card-text">
-                  Una bola grande y fria con sabor a Mango
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col col-12">
-        <div class="card mb-3" style="max-width: 540px">
-          <div class="row g-0">
-            <div class="col-md-4 card-image-top">
-              <img
-                src="img/leche-merengada.png"
-                class="img-fluid rounded-start"
-                alt="VergoletaXL"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Leche Merengada</h5>
-                <p class="card-text">
-                  Una bola grande y fria con sabor a Leche Merengada
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col col-12">
-        <div class="card mb-3" style="max-width: 540px">
-          <div class="row g-0">
-            <div class="col-md-4 card-image-top">
-              <img
-                src="img/chocolate.png"
-                class="img-fluid rounded-start"
-                alt="VergoletaXL"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Chocolate</h5>
-                <p class="card-text">
-                  Una bola grande y fria con sabor a Chocolate
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>      
       </div>
     </main>
     <footer class="text-center text-white" style="background-color: #fb5ead">
