--- a/src/contact.html
+++ b/src/contact.html
@@ -18,7 +18,7 @@
     />
     <title>La Verguería de Mallorca- Horario</title>
   </head>
-  <body>
+  <body id="contact">
     <header>
       <nav class="navbar navbar-expand-lg navbar-light">
         <button
@@ -55,6 +55,46 @@
       </nav>
     </header>
     <main>
+      <div class="container py-4 containerForm">
+        <form id="contactForm">
+          <div class="mb-3">
+            <label class="form-label" for="name">Nombre</label>
+            <input
+              class="form-control"
+              id="name"
+              type="text"
+              placeholder="Nombre"
+            />
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label" for="emailAddress">Email</label>
+            <input
+              class="form-control"
+              id="emailAddress"
+              type="email"
+              placeholder="example@example.com"
+            />
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label" for="message"
+              >¿Que querias comentar?</label
+            >
+            <textarea
+              class="form-control"
+              id="message"
+              type="text"
+              placeholder="Hola ...."
+              style="height: 10rem"
+            ></textarea>
+          </div>
+
+          <div class="d-grid">
+            <button class="btn btn-primary btn-lg" type="submit">Enviar</button>
+          </div>
+        </form>
+      </div>
     </main>
     <footer class="text-center text-white" style="background-color: #fb5ead">
       <div class="container pt-4">
