--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
       </div>
       <p class="map-msg">Donde ir a Comerte una buena Verga</p>
       <iframe
-      id="mapa"
+        id="mapa"
         class="mx-auto d-block img-fluid map border rounded"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49179.452858050405!2d2.638464999035676!3d39.611084043379755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x129793c94fd7b6ab%3A0xff3ec642308cb8fb!2sLa%20Verguer%C3%ADa%20Mallorca%20Erotic%20Waffle%20%26%20ice%20cream!5e0!3m2!1sca!2ses!4v1666186423788!5m2!1sca!2ses"
         width="600"
@@ -107,7 +107,7 @@
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </main>
-    <footer class="text-center text-white" style="background-color: #fb5ead;">
+    <footer class="text-center text-white" style="background-color: #fb5ead">
       <div class="container pt-4">
         <section class="mb-4">
           <a
@@ -117,28 +117,28 @@
             data-mdb-ripple-color="dark"
             ><i class="fab fa-facebook-f"></i
           ></a>
-              <a
+          <a
             class="btn btn-link btn-floating btn-lg text-dark m-1"
             href="https://twitter.com/lavergueria?lang=ca"
             role="button"
             data-mdb-ripple-color="dark"
             ><i class="fab fa-twitter"></i
           ></a>
-              <a
+          <a
             class="btn btn-link btn-floating btn-lg text-dark m-1"
             href="http://lavergueriademallorca.es/"
             role="button"
             data-mdb-ripple-color="dark"
             ><i class="fab fa-google"></i
           ></a>
-              <a
+          <a
             class="btn btn-link btn-floating btn-lg text-dark m-1"
             href="https://www.instagram.com/lavergueria/"
             role="button"
             data-mdb-ripple-color="dark"
             ><i class="fab fa-instagram"></i
           ></a>
-              <a
+          <a
             class="btn btn-link btn-floating btn-lg text-dark m-1"
             href="#!"
             role="button"
@@ -146,10 +146,15 @@
             ><i class="fab fa-linkedin"></i
           ></a>
         </section>
-      </div>  
-      <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2022 Copyright: 
-        <a class="text-dark" href="http://lavergueriademallorca.es/"> LaVergueria.es</a>
+      </div>
+      <div
+        class="text-center text-dark p-3"
+        style="background-color: rgba(0, 0, 0, 0.2)"
+      >
+        © 2022 Copyright:
+        <a class="text-dark" href="http://lavergueriademallorca.es/">
+          LaVergueria.es</a
+        >
       </div>
     </footer>
   </body>
