--- a/src/prices.html
+++ b/src/prices.html
@@ -167,7 +167,7 @@
                   <p class="card-text">
                     Una bola grande y fria con sabor a Fresa
                   </p>
-                  <p><img src="img/lactosa.png" alt=""></p>
+                  <p><img src="img/lactosa.png" alt="" /></p>
                 </div>
               </div>
             </div>
@@ -189,7 +189,7 @@
                   <p class="card-text">
                     Una bola grande y fria con sabor a Turron
                   </p>
-                  <p><img src="img/lactosa.png" alt=""></p>
+                  <p><img src="img/lactosa.png" alt="" /></p>
                 </div>
               </div>
             </div>
@@ -211,7 +211,7 @@
                   <p class="card-text">
                     Una bola grande y fria con sabor a Mango
                   </p>
-                  <p><img src="img/lactosa.png" alt=""></p>
+                  <p><img src="img/lactosa.png" alt="" /></p>
                 </div>
               </div>
             </div>
@@ -233,7 +233,7 @@
                   <p class="card-text">
                     Una bola grande y fria con sabor a Chocolate
                   </p>
-                  <p><img src="img/lactosa.png" alt=""></p>
+                  <p><img src="img/lactosa.png" alt="" /></p>
                 </div>
               </div>
             </div>
@@ -255,7 +255,7 @@
                   <p class="card-text">
                     Una bola grande y fria con sabor a Leche Merengada
                   </p>
-                  <p><img src="img/lactosa.png" alt=""></p>
+                  <p><img src="img/lactosa.png" alt="" /></p>
                 </div>
               </div>
             </div>
@@ -265,32 +265,35 @@
       <h3 class="menu-title">Que te Vas a Comer Hoy</h3>
       <div class="row row-cols-3 row-cols-md-3 g-4">
         <div class="col col-12">
-        <div class="card mb-3">
-          <div class="row g-0">
-            <div class="col-md-4 card-image-top">
-              <img
-                src="img/vergofre.png"
-                class="img-fluid rounded-start"
-                alt="Vergoleta"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Vergofre</h5>
-                <p class="card-text">
-                  Un Gofre muy caliente de la forma que mas te gusta
-                </p>
-                <p class="gluten"><img src="img/glutenFree.png" alt="glutenFree "> Solo por 1€ mas</p>
-                <p>Puedes Rellenarlo por +0.70€ y/o Mojarlo por +0.50€</p>
-                <p>Hazlo mas Diveritdo añadiendo tus Toppings Favoritos</p>
-                <p>1 - +0.50€</p>
-                <p>2 - +0.90€</p>
-                <p>3 - +1,20€</p>
-                <p>Ponle nata Montada para Culminar +0,50€</p>
+          <div class="card mb-3">
+            <div class="row g-0">
+              <div class="col-md-4 card-image-top">
+                <img
+                  src="img/vergofre.png"
+                  class="img-fluid rounded-start"
+                  alt="Vergoleta"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Vergofre</h5>
+                  <p class="card-text">
+                    Un Gofre muy caliente de la forma que mas te gusta
+                  </p>
+                  <p class="gluten">
+                    <img src="img/glutenFree.png" alt="glutenFree " /> Solo por
+                    1€ mas
+                  </p>
+                  <p>Puedes Rellenarlo por +0.70€ y/o Mojarlo por +0.50€</p>
+                  <p>Hazlo mas Diveritdo añadiendo tus Toppings Favoritos</p>
+                  <p>1 - +0.50€</p>
+                  <p>2 - +0.90€</p>
+                  <p>3 - +1,20€</p>
+                  <p>Ponle nata Montada para Culminar +0,50€</p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
         </div>
         <div class="col col-12">
           <div class="card mb-3">
@@ -308,7 +311,10 @@
                   <p class="card-text">
                     Un Gofre muy caliente de la forma que mas te gusta
                   </p>
-                  <p class="gluten"><img src="img/glutenFree.png" alt="glutenFree "> Solo por +1€ mas</p>
+                  <p class="gluten">
+                    <img src="img/glutenFree.png" alt="glutenFree " /> Solo por
+                    +1€ mas
+                  </p>
                   <p>Puedes Rellenarlo por +0.70€ y/o Mojarlo por +0.50€</p>
                   <p>Hazlo mas Diveritdo añadiendo tus Toppings Favoritos</p>
                   <p>1 - +0.50€</p>
