--- a/src/events.html
+++ b/src/events.html
@@ -96,7 +96,7 @@
           <p>
             Estamos encantados de ayudarte para hacer que tu fiesta o
             celebración sea inolvidable. También puedes pedirnos un presupuesto
-            en el correo electrónico lavergueriamallorca@gmail.com
+            en el correo electrónico <a href="mailto:lavergueriamallorca@gmail.com">lavergueriamallorca@gmail.com </a>
           </p>
         </div>
       </article>
