--- a/src/contact.html
+++ b/src/contact.html
@@ -76,7 +76,13 @@
               placeholder="example@example.com"
             />
           </div>
-
+          <div class="mb-3">
+            <label class="form-label" for="reservation"
+              >Reserva</label
+            >
+            <input type="date" id="reservation">
+            <input type="time" id="reservation">
+          </div>
           <div class="mb-3">
             <label class="form-label" for="message"
               >¿Que querias comentar?</label
@@ -85,7 +91,7 @@
               class="form-control"
               id="message"
               type="text"
-              placeholder="Hola ...."
+              placeholder="Uno de nosotros tiene alergias a ..."
               style="height: 10rem"
             ></textarea>
           </div>
