--- a/src/prices.html
+++ b/src/prices.html
@@ -58,18 +58,18 @@
     <main>
       <h1 class="page-title">Price</h1>
       <h3 class="menu-title">Que te Apetece lamer?</h3>
-      <div class="row row-cols-2 row-cols-md-2 row-cols-xs-12 g-4">
-        <div class="col ">
+      <div class="row row-cols-2 row-cols-md-2 g-4">
+        <div class="col col-sm-12">
           <div class="card mb-3">
             <div class="row g-0">
-              <div class="col-md-4 col-xs-12 col-sm-12 card-image-top">
+              <div class="col-md-4 card-image-top">
                 <img
                   src="img/vergoleta.png"
                   class="img-fluid rounded-start"
                   alt="Vergoleta"
                 />
               </div>
-              <div class="col-md-8 col-xs-12 col-sm-12">
+              <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Vergoleta</h5>
                   <p class="card-text">
@@ -103,8 +103,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row row-cols-2 row-cols-md-2 row-cols-xs-1 g-4">
         <div class="col col-sm-12">
           <div class="card mb-3">
             <div class="row g-0">
@@ -152,7 +150,7 @@
       </div>
 
       <h3 class="menu-title">Combina Las Bolas A tu Gusto!</h3>
-      <div class="row row-cols-2 row-cols-md-2  row-cols-xs-1 g-4">
+      <div class="row row-cols-2 row-cols-md-2 g-4">
         <div class="col col-12">
           <div class="card mb-3">
             <div class="row g-0">
@@ -197,8 +195,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row row-cols-2 row-cols-md-2 row-cols-xs-1 g-4">
         <div class="col col-12">
           <div class="card mb-3">
             <div class="row g-0">
@@ -243,8 +239,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row row-cols-2 row-cols-md-2 row-cols-xs-1 g-4">
         <div class="col col-12">
           <div class="card mb-3">
             <div class="row g-0">
@@ -290,12 +284,12 @@
                     <img src="img/glutenFree.png" alt="glutenFree " /> Solo por
                     1€ mas
                   </p>
-                  <p class="card-text">Puedes Rellenarlo por +0.70€ y/o Mojarlo por +0.50€</p>
-                  <p class="card-text">Hazlo mas Diveritdo añadiendo tus Toppings Favoritos</p>
-                  <p class="card-text">1 - +0.50€</p>
-                  <p class="card-text">2 - +0.90€</p>
-                  <p class="card-text">3 - +1,20€</p>
-                  <p class="card-text">Ponle nata Montada para Culminar +0,50€</p>
+                  <p>Puedes Rellenarlo por +0.70€ y/o Mojarlo por +0.50€</p>
+                  <p>Hazlo mas Diveritdo añadiendo tus Toppings Favoritos</p>
+                  <p>1 - +0.50€</p>
+                  <p>2 - +0.90€</p>
+                  <p>3 - +1,20€</p>
+                  <p>Ponle nata Montada para Culminar +0,50€</p>
                 </div>
               </div>
             </div>
@@ -321,12 +315,12 @@
                     <img src="img/glutenFree.png" alt="glutenFree " /> Solo por
                     +1€ mas
                   </p>
-                  <p class="card-text">Puedes Rellenarlo por +0.70€ y/o Mojarlo por +0.50€</p>
-                  <p class="card-text">Hazlo mas Diveritdo añadiendo tus Toppings Favoritos</p>
-                  <p class="card-text">1 - +0.50€</p>
-                  <p class="card-text">2 - +0.90€</p>
-                  <p class="card-text">3 - +1,20€</p>
-                  <p class="card-text">Ponle nata Montada para Culminar +0,50€</p>
+                  <p>Puedes Rellenarlo por +0.70€ y/o Mojarlo por +0.50€</p>
+                  <p>Hazlo mas Diveritdo añadiendo tus Toppings Favoritos</p>
+                  <p>1 - +0.50€</p>
+                  <p>2 - +0.90€</p>
+                  <p>3 - +1,20€</p>
+                  <p>Ponle nata Montada para Culminar +0,50€</p>
                 </div>
               </div>
             </div>
